--- a/01.Advanced OOP/03.Slider/style.css
+++ b/01.Advanced OOP/03.Slider/style.css
@@ -16,8 +16,8 @@ body
 }
 h1
 {
-	text-shadow:1px 1px 1px #002342;
-	color: #3B84C5;
+	text-shadow:1px 1px 1px #666;
+	color: #87c41c;
 }
 #wrapper
 {
