--- a/05.APIs/02.YouTube/style.css
+++ b/05.APIs/02.YouTube/style.css
@@ -33,6 +33,7 @@ h1
 	height: 80px;
 	text-align: center;
 	padding: 20px;
+	z-index: 2;
 }
 #player-border
 {
@@ -43,6 +44,7 @@ h1
 	background: #fff;
 	border-radius: 3px;
 	box-shadow: 0 2px 3px #ccc;
+	z-index: 1;
 }
 #profile
 {
@@ -82,7 +84,7 @@ h1
 .controls
 {
 	float: right;
-	padding: 5px;
+	padding: 3px;
 	margin: 2px;
 	border:none;
 	border-radius: 3px;
@@ -110,8 +112,12 @@ h1
 	padding: 0 5px;
 	font-size: 12px;
 	color: rgba(135,196,100,1);
-	width: 300px;
+	width: 260px;
 	height: 14px;
+}
+#load-video
+{
+	width: 120px;
 }
 
 #gshare
@@ -126,4 +132,21 @@ footer
 	color: #aaa;
 	margin: auto;
 	text-shadow:1px 1px 0 rgba(135,196,100,0.5);
+}
+#vol
+{
+	float: right;
+}
+input[type='range'] {
+    -webkit-appearance: none !important;
+    background: rgba(135,196,100,0.8);
+    width: 100px;
+    height:4px;
+}
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none !important;
+    background: rgba(135,196,100,1);
+    box-shadow:1px 1px 0 #999;
+    height:14px;
+    width:6px;
 }
